🚧 Add PWA Minimal Requirements

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Vite based PWA experiment in React" />
+    <meta name="theme-color" content="#00FFFF" />
+    <title>Vite React PWA Demo</title>
   </head>
   <body>
     <div id="root"></div>
